    - Perhaps number them
    - Fix dragging, once again _codegreen to the resque
    - Disable the textarea by default again
    - List when the mod was last updated
    - Also extract the year
    - Add a notice for modders and players
    - Minor cleanup
    - Display factorio version and mod release date
    - Mark deprecated mods
    - Add an install/installed button
    - Remove the need for some ignored_by_interactions
    - Add a "not yet ported" status
    - Throw in some colors
    - Hi hello
    - Move the compatibility color to the factorio version number
    - Test a notification icon
    - Add shortcut button
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 11. 01
  Info:
    - Strip out space exploration compatibility
    - Replace ' with "
    - Play around with the objectives window
    - Clear the goal description when hovered
    - Begin generation of the newsletter database
    - Allow chatgtp a chance at doing the conversion
    - Attempt to leverage helpers.json_to_table
    - Pack all my mod info in a 100 kb lua file
    - Pack it within 57 kb
    - Move database into the scripts folder
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 01
  Info:
    - Ported to 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 02. 01
  Info:
    - Stash proof of concept
    - Swap the sprite tags out for the all-in-one icon flag
    - Create a textarea when you click the link
    - Close the textfield when you click somewhere else
    - Prevent multiple textboxes from existing
    - Use an arrow instead of a :
    - Destroy the textfield when you input (e.g. wasd walk)
    - mod_prefix ..
    - Shorten it to leftclick
    - Cleanup
    - Stash comments (2024. 03. 15)